<resources>
    <string name="app_name">MyAccountActivity</string>
    <string name="titleText">My Account</string>
    <string name="dialogPassText">Update Password</string>
    <string name="currentpass_hint">Current Password</string>
    <string name="newpass_hint">New Password</string>
    <string name="updatePass">Update Password</string>
    <string name="dialogUserText">Update Username</string>
    <string name="currentuser_hint">Current Username</string>
    <string name="newuser_hint">New Username</string>
    <string name="updateUser">Update Username</string>
    <string name="buttonLogout">Logout</string>
    <string name="textViewUsername">Username:</string>
    <string name="textViewPassword">Password:</string>
    <string name="buttonResetUser">Reset Username</string>
    <string name="buttonResetPass">Reset Password</string>
</resources>